Update project: Apply latest improvements and new features